@@ -6,6 +6,7 @@
 	macro : fixed compiler crash if `@:genericBuild` meta is removed by a macro during building (#9391)
 	flash : fixed var shadowing issue for variables captured in a closure inside of a loop (#9624)
 	flash : fixed `VerifyError` exception when `Void` end up as an argument type after inlining (#9678)
+	php : support @:native("") for extern classes (#6448)
 	nullsafety: fixed `@:nullSafety(Off)` in closures inside of constructors (#9643)
 	nullsafety: fixed "Type not found NullSafetyMode_Impl_" (#9483)
 
